[package]
name = "svf"
version = "0.1.0"
edition = "2021"

[lib]
name = "svf"
path = "src/lib.rs"
crate-type = ["cdylib","lib"]

[[bin]]
name = "svf_standalone"
path = "src/main.rs"

[dependencies]

plugin_util = { git = "https://github.com/AquaEBM/plugin_util.git" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
core_simd = { git = "https://github.com/rust-lang/portable-simd.git" }
std_float = { git = "https://github.com/rust-lang/portable-simd.git" }